[gd_scene load_steps=7 format=3 uid="uid://d01tn2bqqn35d"]

[ext_resource type="Script" path="res://09.prototyping-space-adventure/Objects/Weapon/Weapon2D.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b2w0487qmw8dn" path="res://09.prototyping-space-adventure/Objects/Weapon/ShotSparkle.svg" id="2"]
[ext_resource type="PackedScene" uid="uid://cjuj16vhaypvl" path="res://09.prototyping-space-adventure/Objects/Weapon/BulletSpawner2D.tscn" id="2_2qqr4"]

[sub_resource type="Animation" id="1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="2"]
resource_name = "fire"
length = 0.03
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m5mll"]
_data = {
"RESET": SubResource("1"),
"fire": SubResource("2")
}

[node name="Weapon2D" type="Marker2D"]
script = ExtResource("1")

[node name="BulletSpawner2D" parent="." instance=ExtResource("2_2qqr4")]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(1.1, 1.1, 1.1, 1)
z_index = 1
texture = ExtResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m5mll")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
